# covsurver-client

./: README.md  pyproject.toml
covsurver_client/: __init__.py  cli.py  client.py
