[tool.poetry]
name = "covsurver-client"
version = "0.1.0"
description = ""
authors = ["Kirill Varchenko <kirill.varchenko@gmail.com>"]
readme = "README.md"
packages = [{include = "covsurver_client"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.5"
click = "^8.1.6"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
covsurver = "covsurver_client.cli:cli"


[tool.isort]
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
line_length = 88
profile = "black"
